[package]
name = "bhcli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
base64 = "0.21.0"
bresenham = "0.1.1"
chrono = "0.4.19"
clap = { version = "4.1.14", features = ["derive", "env"] }
clipboard = "0.5.0"
colors-transform = "0.2.4"
confy = "0.5.1"
crossbeam = "0.8.1"
crossbeam-channel = "0.5.1"
crossterm = { version = "0.26.1" }
http = "0.2.4"
image = "0.24.6"
lazy_static = "1.4.0"
linkify = "0.9.0"
log = "0.4.17"
log4rs = "1.2.0"
rand = "0.8.4"
regex = "1.5.4"
reqwest = { version = "0.11.4", features = ["blocking", "cookies", "socks", "multipart"] }
rodio = "0.17.1"
rpassword = "7.2.0"
select = "0.6.0-alpha.1"
serde = "1.0.130"
serde_derive = "1.0.88"
serde_json = "1.0"
termage = "1.1.1"
textwrap = "0.16.0"
toml = "0.7.3"
tui = { version = "0.19.0", features = ["crossterm"], default-features = false  }
unicode-width = "0.1.8"